# sb_rpg

./: .gitignore  Android.mk  AndroidManifest.xml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTIBUTING.md  Info.plist  Makefile  MetalRenderer.m  README.md  ai.cpp  ai.h  build.sh  game_utils.cpp  game_utils.h  kings  main.cpp  qmake.conf  untitled  untitled.pro
.circleci/: config.yml
amiga/: Makefile  kayte.c  kayte.h  kayte.library  main.c
launch/: README.md  installwizard.cpp  installwizard.h  installwizard.ui  launch.pro  main.cpp
metal/: SDL2.example.metal
plugin/: blog-manager.php  card_database.php  game-customer-area-with-2fa.php  game-customer-area.php
src/: commands.cpp  commands.h  credits.cpp  gamepad.cpp  gamepad.h
srv/: serverRegistration.cpp
